# SECURE_BOOTLOADER

./: .gitignore  CHANGELOG.md  README.md  ReadMe.md  SECURITY.md  mkdocs.yml  mock_aes.c##950d9118cfc2a0a7ad55888bbd96b7f7.gcov
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI_Pipeline_template.yml  CI_pipeline.yml  CI_pipeline_modbus_example.yml  Page_with_reports_deploy_tempate.yaml  mkdocs-deploy.yml  release.yml
docs/: getting-started.md  index.md  reports.md
docs/architecture/: index.md  overview.md  protocol.md  security.md
docs/porting/: configuration.md  hw-drivers.md  index.md
docs/testing/: unit-tests.md
hw/ATMEGA328P_ARDUINO_UNO_R3/: CMakeLists.txt
hw/ATMEGA328P_ARDUINO_UNO_R3/Bl_drv_interface/: bl_flash_drv.c  bl_flash_drv.h  bl_hw_config.h  bl_key_drv.c  bl_key_drv.h  bl_status_led_drv.c  bl_status_led_drv.h  bl_usart_drv.h  core_drv.h
hw/ATMEGA328P_ARDUINO_UNO_R3/Core/Bl_drv_interface/: bl_flash_drv.h  bl_key_drv.h  bl_status_led_drv.c  bl_status_led_drv.h  bl_usart_drv.c  bl_usart_drv.h  core_drv.c  core_drv.h
hw/ATMEGA328P_ARDUINO_UNO_R3/Core/Inc/: bl_hw_config.h
hw/ATMEGA328P_ARDUINO_UNO_R3/src/: main.c
hw/CubeMX_CMAKE_Project/: CMakeLists.txt
hw/STM32G070RB/: CMakeLists.txt  linker.ld
hw/STM32G070RB/Core/Bl_drv_interface/: bl_crc_drv.c  bl_crc_drv.h  bl_flash_drv.c  bl_flash_drv.h  bl_key_drv.c  bl_status_led_drv.c  bl_usart_drv.c  core_drv.c  core_drv.h
hw/STM32G070RB/Core/Src/: main.c
hw/STM32G071RB/: CMakeLists.txt  linker.ld
hw/STM32G071RB/Core/Bl_drv_interface/: bl_crc_drv.c  bl_crc_drv.h  bl_flash_drv.c  bl_flash_drv.h  bl_key_drv.c  bl_key_drv.h  bl_status_led_drv.c  bl_status_led_drv.h  bl_usart_drv.c  bl_usart_drv.h  core_drv.c
hw/STM32G071RB/Core/Inc/: bl_hw_config.h  main.h
hw/STM32G071RB/Core/Src/: core_init.c  main.c
hw/STM32G071RB/Core/Startup/: startup_stm32g071rbtx.s
hw/STM32G071RB/Drivers/CMSIS/Device/: stm32g071xx.h
hw/STM32G474RE/: CMakeLists.txt  STM32G474XX_FLASH.ld
hw/STM32G474RE/Core/Bl_drv_interface/: bl_crc_drv.c  bl_crc_drv.h  bl_flash_drv.c  bl_flash_drv.h  bl_key_drv.c  bl_key_drv.h  bl_status_led_drv.c  bl_status_led_drv.h  bl_usart_drv.c  bl_usart_drv.h  core_drv.c  core_drv.h
hw/STM32G474RE/Core/Inc/: bl_hw_config.h
hw/STM32G474RE/Core/Src/: main.c  syscalls.c
hw/STM32G474RE/Core/Startup/: startup_stm32g474xx.s
hw/STM32G474RE/Drivers/CMSIS/Device/: stm32g474xx.h
hw/STM32_TEMPLATE/: CMakeLists.txt  linker.ld
hw/STM32_TEMPLATE/Core/Bl_drv_interface/: bl_crc_drv.c  bl_flash_drv.c  bl_key_drv.c  bl_key_drv.h  bl_status_led_drv.c  bl_usart_drv.c  bl_usart_drv.h  core_drv.c  core_drv.h
hw/STM32_TEMPLATE/Core/Inc/: bl_hw_config.h
hw/STM32_TEMPLATE/Core/Src/: main.c  syscalls.c  sysmem.c  system_stm32xxxx.c.placeholder
hw/STM32_TEMPLATE/Core/Startup/: PLACEHOLDER.md
hw/STM32_TEMPLATE/Drivers/CMSIS/: PLACEHOLDER.md
hw/cmake/: parse_encr_key.cmake
hw/config/AVR/: AVR_compiler_flags.cmake  Toolchain-AVR-gcc.cmake
hw/config/STM32/: Toolchain-arm-gcc.cmake  compiler_flags.cmake
hw/hw_CMAKE_template/: CMakeLists.txt
src/: main_app.c  main_app.h  main_app_priv.h
src/CRC/: crc.c  crc_api.h
test/: mock_aes.c##950d9118cfc2a0a7ad55888bbd96b7f7.gcov
test/CRC/: CMakeLists.txt  crc_test.c  crc_test_main.c  crc_test_runner.c  custom_targets.cmake
test/MAIN_APP/: CMakeLists.txt  bl_hw_config.h  custom_targets.cmake  main_app_com_fsm_test.c  main_app_exit_test.c  main_app_init_test.c  main_app_page_cmd_test.c  main_app_rx_fsm_test.c  main_app_start_cmd_test.c  main_app_test.c  main_app_test_main.c  main_app_test_runner.c
test/MAIN_APP/cmock_config/: crc_api.yml
test/MAIN_APP/cmocks/: mock_aes.c  mock_aes.h  mock_bl_flash_drv.c  mock_bl_flash_drv.h  mock_bl_key_drv.c  mock_bl_key_drv.h  mock_bl_status_led_drv.c  mock_bl_status_led_drv.h  mock_bl_usart_drv.c  mock_bl_usart_drv.h  mock_core_drv.c  mock_core_drv.h  mock_crc_api.c  mock_crc_api.h
test/__embedded_target_manager/: CI.yaml  clean.yaml  config.yaml  format.yaml  make.yaml  requirements.txt  target_manager.py  test.yaml
test/_config_scripts/CI/: CI.py  ReadMe.md  config.yaml
test/_config_scripts/venv_setup/: requirements.txt
test/cmock/src/: CMakeLists.txt
test/template/: CMakeLists.txt  HowToUse.txt  custom_targets.cmake  generate_mock.cmake  template_test_main.c  template_test_runner.c
test/unity/: CMakeLists.txt
